--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-<style type="text/css">
-        body{background-color:aliceblue;}
-   
-       </style>
+body {
+        background-color:aliceblue; 
+        color: #000000;
+}
